# morphocilia

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tox.ini  umls.txt
.github/workflows/: ci.yml
morphocilia/: CiliaClassifier.ml  PixelClassifier.cl  Scaler.sca  __main__.py  classifier.py  io.py  quantifier.py  region_mapper.py  segmenter.py
notebooks/: ObjectClassifier.cl  PixelClassifier3.cl  cilia_classification.ipynb  cilia_classifier_tests.ipynb  cilia_mapping_all.ipynb  cilia_quantification.ipynb  cilia_segmentation.ipynb  classification_regionmap.ipynb  image_handling.ipynb  regionmapping.ipynb
tests/: test_dummy.py
